# questboard

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  dependency-audit.yml
contracts/quest-escrow/: Cargo.toml
contracts/quest-escrow/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/quest-escrow/test_snapshots/test/: approve_releases_reward_to_worker.1.json  cancel_open_quest_refunds_owner.1.json  claim_already_claimed_errors.1.json  full_lifecycle_post_claim_submit_approve.1.json  list_quests_paginates.1.json  post_quest_accepts_future_deadline.1.json  post_quest_increments_count_and_ids.1.json  post_quest_locks_reward_in_escrow.1.json  post_quest_rejects_overlong_metadata.1.json  post_quest_rejects_past_deadline.1.json  reclaim_before_deadline_errors.1.json  reclaim_expired_refunds_after_deadline.1.json  reclaim_unclaimed_quest_errors.1.json  submit_records_deliverable.1.json  submit_rejects_overlong_pointer.1.json  submit_requires_claimed_status.1.json
docs/: architecture.md  contract-api.md  deployment-guide.md  local-runbook.md  security.md
scripts/: seed-issues.sh
server/: .env.example  package.json  tsconfig.json  vitest.config.ts
server/prisma/: schema.prisma
server/src/: app.test.ts  app.ts  db.ts  index.ts  schemas.ts
web/: .env.example  next.config.mjs  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: QuestCard.tsx  (+2 more)
(+9 files in other folders)
